# Nos

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
config/: settings.yaml
scripts/: bootstrap_local.ps1  install_precommit_hook.ps1  pre_commit.ps1  quality_check.ps1
src/local_assistant/: __init__.py  assistant.py  config.py  intent_router.py  logging_setup.py  main.py  models.py
src/local_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/local_assistant/actions/: __init__.py  app_resolver.py  windows_actions.py
src/local_assistant/llm/: ollama_client.py
src/local_assistant/stt/: faster_whisper_stt.py
src/local_assistant/tts/: piper_tts.py
tests/: test_app_resolver.py  test_assistant.py  test_config.py  test_integration_flow.py  test_intent_router.py  test_main_build_integration.py  test_ollama_client.py  test_stt_faster_whisper.py  test_windows_actions.py
